--- a/app/src/main/res/layout/fragment_tutorial.xml
+++ b/app/src/main/res/layout/fragment_tutorial.xml
@@ -16,7 +16,7 @@
         android:layout_height="match_parent">
 
         <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/viewpager"
+            android:id="@+id/viewpager2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
