--- a/app/src/main/res/layout/fragment_upgrade.xml
+++ b/app/src/main/res/layout/fragment_upgrade.xml
@@ -38,14 +38,13 @@
             android:text="@string/info_1_sub" />
 
         <Button
-            android:id="@+id/bFinish"
+            android:id="@+id/bUpgrade"
             style="@style/button"
-            android:layout_marginTop="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginTop="15dp"
             android:gravity="center"
-            android:onClick="onStartMain"
             android:text="Buy the upgrade" />
 
     </LinearLayout>
