--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -3,70 +3,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/lightGrey"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:weightSum="7"
+    android:weightSum="5"
     tools:context=".activity.MainActivity">
-
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1">
-
-        <ImageButton
-            android:id="@+id/bSetting"
-            style="@style/small_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:gravity="center"
-            android:padding="5dp"
-            android:src="@drawable/ic_settings_white_36dp" />
-
-        <ImageButton
-            android:id="@+id/bInfo"
-            style="@style/small_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="15dp"
-            android:layout_toRightOf="@id/bSetting"
-            android:gravity="center"
-            android:padding="5dp"
-            android:src="@drawable/ic_help_white_36dp" />
-
-        <ImageButton
-            android:id="@+id/bUpgrade"
-            style="@style/small_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_gravity="start"
-            android:gravity="center"
-            android:padding="5dp"
-            android:src="@drawable/ic_arrow_upward_white_36dp" />
-
-    </RelativeLayout>
-
-    <TextView
-        android:id="@+id/motivationText"
-        style="@style/sub_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_weight="1"
-        android:gravity="center" />
 
     <nl.mranderson.sittingapp.custom.CircularSeekBar
         android:id="@+id/seekBar"
         android:layout_width="250dp"
         android:layout_height="250dp"
         android:layout_gravity="center"
-        android:layout_weight="1"
-        android:gravity="center" />
+        android:gravity="center"/>
 
     <TextView
         android:id="@+id/timeText"
@@ -74,9 +25,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_weight="3"
         android:gravity="center"
-        android:text="05:00" />
+        android:text="05:00"
+        android:layout_weight="1"/>
 
     <Button
         android:id="@+id/bStart"
@@ -85,6 +36,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
-        android:text="Start" />
+        android:text="Start"/>
 
 </LinearLayout>
