--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -1,78 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/lightGrey"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:weightSum="7"
     tools:context=".activity.MainActivity">
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1">
+    <LinearLayout
+        android:id="@+id/toolbar_wrapper"
+        android:layout_width="match_parent"
+        android:layout_height="64dp"
+        android:background="@color/colorPrimary">
 
-        <ImageButton
-            android:id="@+id/bBack"
-            style="@style/small_button"
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/messageText"
+            android:textSize="25sp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:gravity="center"
-            android:padding="5dp"
-            android:src="@drawable/ic_arrow_back_white_36dp" />
+            android:layout_gravity="center"
+            android:text="@string/messages_starting"
+            android:textColor="@android:color/white"
+            android:gravity="center" />
 
-        <ImageButton
-            android:id="@+id/bUpgrade"
-            style="@style/small_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_gravity="start"
-            android:gravity="center"
-            android:padding="5dp"
-            android:src="@drawable/ic_arrow_upward_white_36dp" />
-
-    </RelativeLayout>
-
-    <TextView
-        android:id="@+id/messageText"
-        style="@style/sub_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:text="@string/messages_starting" />
+    </LinearLayout>
 
     <nl.mranderson.sittingapp.custom.CircularSeekBar
         android:id="@+id/seekBar2"
+        android:layout_below="@id/toolbar_wrapper"
         android:layout_width="250dp"
         android:layout_height="250dp"
+        android:layout_centerHorizontal="true"
         android:layout_gravity="center"
-        android:layout_weight="1"
         android:gravity="center" />
 
     <TextView
         android:id="@+id/countdown"
         style="@style/timer_text"
+        android:layout_below="@id/seekBar2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:layout_gravity="center"
-        android:layout_weight="3"
         android:gravity="center" />
 
     <Button
         android:id="@+id/bStop"
         style="@style/button"
+        android:layout_marginTop="30dp"
+        android:layout_below="@id/countdown"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:layout_gravity="center"
         android:gravity="center"
         android:text="Stop" />
 
-</LinearLayout>
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/banner_ad_unit_id"/>
+
+</RelativeLayout>
