--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#2196f3</color>
-    <color name="colorPrimaryDark">#1976d2</color>
-    <color name="colorAccent">#FF4081</color>
     <color name="background_material_light">#2196f3</color>
     <color name="primary_text_default_material_light">#deffffff</color>
     <color name="primary_text_material_light">#ffffff</color>
     <color name="orange">#b66714</color>
     <color name="blue">#ff33b5e5</color>
     <color name="red">#F44336</color>
+    <color name="white">#FFFFFF</color>
+
+    <color name="colorPrimary">#0277BD</color>
+    <color name="colorPrimaryDark">#125688</color>
+    <color name="textColorPrimary">#FFFFFF</color>
+    <color name="windowBackground">#FFFFFF</color>
+    <color name="navigationBarColor">#000000</color>
+    <color name="colorAccent">#c8e8ff</color>
+
+    <color name="lightGrey">#EEEEEE</color>
+
+
 </resources>
