--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,35 +1,22 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <!--<item name="colorAccent">@color/colorAccent</item>-->
-        <item name="android:colorBackground">@color/background_material_light</item>
-    </style>
-
-    <style name="AppTheme.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-    </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
     <style name="sub_text">
-        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textColor">@android:color/black</item>
         <item name="android:textSize">30sp</item>
     </style>
 
     <style name="sub_text_2">
-        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textColor">@android:color/black</item>
         <item name="android:textSize">20sp</item>
     </style>
 
     <style name="timer_text">
-        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textColor">@android:color/black</item>
         <item name="android:textSize">70sp</item>
     </style>
 
@@ -52,10 +39,11 @@
     <style name="list_header">
         <item name="android:textColor">@color/colorPrimaryDark</item>
         <item name="android:textSize">20sp</item>
-        <item name="android:padding">10dp</item>
+        <item name="android:padding">0dp</item>
     </style>
 
     <style name="list_item">
+        <item name="android:textColor">@color/colorPrimary</item>
         <item name="android:textSize">18sp</item>
         <item name="android:padding">10dp</item>
     </style>
@@ -69,18 +57,23 @@
         <item name="android:padding">10dp</item>
         <item name="android:paddingRight">20dp</item>
         <item name="android:theme">@style/CheckBoxAppTheme</item>
+        <item name="android:buttonTint">@color/colorPrimaryDark</item>
     </style>
 
     <style name="CheckBoxAppTheme">
-        <item name="android:colorAccent">
-            @color/colorPrimaryDark
-        </item>
-        <!--<item name="android:colorControlNormal">-->
-            <!--@color/theBorderColorInUncheckedState-->
-        <!--</item>-->
-        <!--<item name="android:colorControlHighlight">-->
-            <!--@color/theBackgroundColorWhenFocusingTheCheckBox-->
-        <!--</item>-->
+        <item name="android:colorAccent">@color/colorPrimaryDark</item>
     </style>
 
+
+    <style name="MyMaterialTheme" parent="MyMaterialTheme.Base">
+
+    </style>
+
+    <style name="MyMaterialTheme.Base" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+    </style>
 </resources>
