--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -32,7 +32,7 @@
             android:id="@+id/tutorial_wrapper"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@android:color/white"
+            android:background="@drawable/wrapper_item_selector"
             android:padding="5dp">
 
             <ImageView
@@ -71,7 +71,7 @@
             android:id="@+id/contact_developer_wrapper"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@android:color/white"
+            android:background="@drawable/wrapper_item_selector"
             android:padding="5dp">
 
             <ImageView
@@ -103,7 +103,7 @@
             android:id="@+id/rating_wrapper"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@android:color/white"
+            android:background="@drawable/wrapper_item_selector"
             android:padding="5dp">
 
             <ImageView
