--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="blue">#ff33b5e5</color>
     <color name="red">#F44336</color>
     <color name="white">#FFFFFF</color>
+    <color name="grey">#e0e0e0</color>
 
     <color name="colorPrimary">#0277BD</color>
     <color name="colorPrimaryDark">#125688</color>
