renaming music to tone

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -157,7 +157,7 @@
                 android:text="@string/tone" />
 
             <CheckBox
-                android:id="@+id/notify_music"
+                android:id="@+id/notify_tone"
                 style="@style/list_item_check"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
