--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lightGrey"
+    android:background="@color/white"
     android:orientation="vertical"
     tools:context=".activity.MainActivity">
 
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/messages_starting"
-            android:textColor="@android:color/white"
+            android:textColor="@color/textAndIcon"
             android:gravity="center" />
 
     </LinearLayout>
