--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -16,21 +16,21 @@
 
         <TextView
             android:id="@+id/messageText"
-            android:textSize="25sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:gravity="center"
             android:text="@string/messages_starting"
             android:textColor="@color/textAndIcon"
-            android:gravity="center" />
+            android:textSize="25sp" />
 
     </LinearLayout>
 
     <nl.mranderson.sittingapp.custom.CircularSeekBar
         android:id="@+id/seekBar2"
-        android:layout_below="@id/toolbar_wrapper"
         android:layout_width="250dp"
         android:layout_height="250dp"
+        android:layout_below="@id/toolbar_wrapper"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center"
         android:gravity="center" />
@@ -38,22 +38,22 @@
     <TextView
         android:id="@+id/countdown"
         style="@style/timer_text"
-        android:layout_below="@id/seekBar2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/seekBar2"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center"
         android:gravity="center" />
 
     <Button
         android:id="@+id/bStop"
-        style="@style/button"
-        android:layout_marginTop="30dp"
-        android:layout_below="@id/countdown"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/countdown"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center"
+        android:layout_marginTop="30dp"
         android:gravity="center"
         android:text="Stop" />
 
@@ -64,6 +64,6 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         ads:adSize="BANNER"
-        ads:adUnitId="@string/banner_ad_unit_id"/>
+        ads:adUnitId="@string/banner_ad_unit_id" />
 
 </RelativeLayout>
