--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -49,8 +49,7 @@
                 android:layout_centerVertical="true"
                 android:layout_toRightOf="@id/tutorial_icon"
                 android:layout_marginLeft="5dp"
-                android:text="@string/enable_tutorial_mode"
-                android:textColor="@color/colorPrimary" />
+                android:text="@string/enable_tutorial_mode"/>
 
         </RelativeLayout>
 
@@ -89,8 +88,7 @@
                 android:layout_centerVertical="true"
                 android:layout_toRightOf="@id/contact_icon"
                 android:layout_marginLeft="5dp"
-                android:text="@string/contact_the_developers"
-                android:textColor="@color/colorPrimary" />
+                android:text="@string/contact_the_developers" />
 
         </RelativeLayout>
 
@@ -121,8 +119,7 @@
                 android:layout_centerInParent="true"
                 android:layout_toRightOf="@id/rating_icon"
                 android:layout_marginLeft="5dp"
-                android:text="@string/rate_the_app"
-                android:textColor="@color/colorPrimary" />
+                android:text="@string/rate_the_app" />
 
         </RelativeLayout>
     </LinearLayout>
