--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -10,18 +10,15 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
-    <TextView
+    <nl.mranderson.sittingapp.custom.CountdownTextView
         android:id="@+id/countdown"
-        style="@style/timer_text"
+        android:textSize="80sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_weight="1"
-        android:fontFamily="@font/nunito_bold"
-        android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -30,7 +27,7 @@
     <Button
         android:id="@+id/bStop"
         style="@style/Widget.AppCompat.Button.Colored"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/countdown"
         android:layout_centerHorizontal="true"
@@ -38,7 +35,13 @@
         android:layout_marginTop="30dp"
         android:gravity="center"
         android:text="Stop"
-        app:layout_constraintTop_toBottomOf="@+id/countdown"/>
+        app:layout_constraintTop_toBottomOf="@+id/countdown"
+        android:layout_marginBottom="8dp"
+        ads:layout_constraintBottom_toTopOf="@+id/assistent"
+        ads:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="8dp"
+        ads:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="8dp" />
 
     <Button
         android:id="@+id/bPAUSE"
