--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context="nl.mranderson.sittingapp.NavigationActivity">
 
-    <android.support.v4.view.ViewPager
+    <nl.mranderson.sittingapp.custom.NonSwipingViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
