--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -72,6 +72,9 @@
 
                 <SeekBar
                     style="@style/list_item_check"
+                    android:id="@+id/sensitivity"
+                    android:min="0"
+                    android:max="100"
                     android:layout_below="@id/sensitivity_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
